{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Movement",
            "id": "3981d7a6-d4da-4792-8f43-356b146933d7",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "PassThrough",
                    "id": "5da6046c-9bf0-415f-ae0d-0746b4a8c6de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "ccf8ec86-fe3d-47c4-a526-74a4b00c422d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "11e35807-319a-468c-a6a1-d83108f5645a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "68866d0e-5f14-4fab-b90f-65a206c877d2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "96193bf5-c660-4467-aada-38959e7f9981",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow keys",
                    "id": "db92c6c9-1bc1-48d5-9381-d32543605a19",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e51b9182-8f69-4ce9-93da-f0210204bf15",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "248dcc00-3e41-48db-8acc-b327b5c87b5e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Stick",
                    "id": "d5e47fac-be6d-4f86-9903-19ae58bb472d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Dpad",
                    "id": "ba9ba421-0c64-43ef-9b71-de718b7babb3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Stick",
                    "id": "8235c184-a5a0-43a8-8227-0d98d48f0882",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a7abfe61-2a72-48ae-9be2-5e9225151059",
                    "path": "<SwitchProControllerHID>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "SwitchProController",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6d3a5b09-64fe-41ec-bc5c-d04551f84995",
                    "path": "<SwitchProControllerHID>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "SwitchProController",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Dpad",
                    "id": "188034a8-7fe3-4ab7-b42e-5280c7e4487b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ae8d6a5d-1f27-4152-8061-179483d124b4",
                    "path": "<SwitchProControllerHID>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "SwitchProController",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "047d9dd6-4cfb-493a-80a8-b960282c7a8e",
                    "path": "<SwitchProControllerHID>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "SwitchProController",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2baf2159-c008-48ec-a4f8-2f8d0710de40",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "867e5327-0ca1-44ae-95b2-00050701a13f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b24caeed-5f0f-4586-9f45-8e6c331b2d7f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70f9e8fd-faea-4488-b058-c4a0e8367413",
                    "path": "<SwitchProControllerHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "SwitchProController",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GrapplingHook",
            "id": "bbba7fcd-fd67-4420-96b8-654ab4927a37",
            "actions": [
                {
                    "name": "FireHook",
                    "type": "Button",
                    "id": "bb3fa039-8ff6-4493-8798-42e8ddbdeff1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f85e0b5b-5341-4273-8c15-6e8a080de5a3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "FireHook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16819206-43e1-4500-b74d-1bb1cb8cbe58",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "SwitchProController",
                    "action": "FireHook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "SwitchProController",
            "bindingGroup": "SwitchProController",
            "devices": [
                {
                    "devicePath": "<SwitchProControllerHID>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}